# trip-aggregator

./: .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: deploy-production.yml  deploy-stage.yml  linters.yml  tests.yml
etc/: crontab.txt  fixture.sql  migrations.sql
tests/: conftest.py
tests/trip_aggregator/: test_create_trips.py  test_get_tickets.py  test_run_task.py
tests/trip_aggregator/cost_of_leaving/: test_get_cost_of_leaving.py
tests/trip_aggregator/run_task/: test_calculate_weekend_interval.py  test_get_tickets.py  test_run_task.py  test_weekend_interval.py
tests/trip_aggregator/storage/tickets/: test_fetch_tickets.py
tests/trip_aggregator/storage/trips/: test_replace_trips.py
tests/trip_aggregator/trips_creator/: test_create_trips.py  test_make_trip.py  test_trip_duration_nights.py  test_trip_meals_amount.py
trip_aggregator/: __init__.py  cost_of_leaving.py  models.py  run_task.py  settings.py  trips_creator.py  types.py
trip_aggregator/storage/: __init__.py  tickets.py  trips.py
