[tool.poetry]
name = "trip-aggregator"
version = "0.1.0"
description = ""
authors = ["Simon <spam@esemi.ru>"]
license = "GNU GENERAL PUBLIC LICENSE V3"

[tool.poetry.dependencies]
python = "^3.12"
pydantic-settings = "^2.1.0"
psycopg2 = "^2.9.9"
sqlalchemy = "^2.0.23"
pendulum = "^3.0.0"


[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.23.2"
pytest = "^7.4.3"
wemake-python-styleguide = "^0.18.0"
mypy = "^1.7.1"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"


[tool.mypy]
python_version = 3.12
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
